--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -43,9 +43,10 @@
     max-width: 100%;
     max-height: 70px;
 }
-.menu_responsive{
+.navbar--responsive{
     display: none;
 }
+
 .lines{
     display: none;
     font-size: 30px;
@@ -58,24 +59,7 @@
     .lines{
         display: block;
     }
-    .menu_responsive:hover{
-        display: block;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        justify-content: top;
-        align-items: top;
-        top: 112px;
-        right: 0px;
-        padding-top: 20px;
-        min-width: 100%;
-        height: 100vh;
-        background-color: #ffffff;
-        z-index: 100;
-        gap: 30px;
-        text-align: center;
-    }
-    .lines:hover + .menu_responsive{
+    .navbar--open {
         display: block;
         position: absolute;
         display: flex;
@@ -93,8 +77,3 @@
         text-align: center;
     }
 }
-
-
-
-
-
